--- a/main.conf
+++ b/main.conf
@@ -7,14 +7,15 @@ exten => lenny,1,Gosub(talk-bot-core,init,unmanned(lenny,16,7))
 [talk-bot-core]
 exten => init,1(manned),Set(MANNED=1)
  same => n,Answer()
- same => n,While($[${LEN(${STARTNUM})}<2])
- same => n,  WaitDigit(${IF($[${LEN(${STARTNUM})}>0]?0.5:1.5)},${IF($[${LEN(${STARTNUM})}>0]?0)}123456789)
+ same => n,While($["${STARTNUM}"!="0"&${LEN(${STARTNUM})}<2])
+ same => n,  WaitDigit(${IF($[${LEN(${STARTNUM})}>0]?0.5:1.5)},0123456789)
  same => n,  ExecIf($["${WAITDIGITSTATUS}"=="DTMF"]?Set(STARTNUM=${STARTNUM}${WAITDIGITRESULT}):ExitWhile())
  same => n,EndWhile()
  same => n(unmanned),MixMonitor(${UNIQUEID}.wav)
- same => n,Set(STARTNUM=${IF($["${STARTNUM}"==""]?1:${STARTNUM})})
+ same => n,Set(STARTPRI=${IF($["${STARTNUM}"=="0"]?listen:1)})
+ same => n,Set(STARTNUM=${IF($["${STARTNUM}"==""|"${STARTNUM}"=="0"]?1:${STARTNUM})})
  same => n,Set(STARTNUM=${IF($[${STARTNUM}>${ARG2}]?${ARG2}:${STARTNUM})})
- same => n,Gosub(talk,1(${ARG1},${ARG2},${ARG3},${STARTNUM}))
+ same => n,Gosub(talk,${STARTPRI}(${ARG1},${ARG2},${ARG3},${STARTNUM}))
 
 exten => talk,1,Set(i=${IF($[0${i}==0${ARG2}]?${ARG3}:$[0${i}+${IF($["${i}"==""]?${ARG4}:1)}])})
  same => n,Playback(talk-bot/${ARG1}/${i})
