--- a/app-talk-bot/main.conf
+++ b/app-talk-bot/main.conf
@@ -40,13 +40,13 @@ exten => talk,1,NoOp()
  same => n,Set(i=${IF($[0${i}==0${TOTAL}]?${LOOPN}:$[0${i}+${IF($[0${i}]?1:${START})}])})
  same => n,Set(FILE=talk-bot/${NAME}/${i}${IF($[${i}==${LOOPN}]?"L")})
  same => n(play),Gosub(sub-play-${IF($[${CONTROL}]?control:locked)},1)
- same => n(listen),BackgroundDetect(talk-bot/${BG},1500)
+ same => n(listen),BackgroundDetect(talk-bot/${IF($[0${i}]?${BG}:silence)},1500)
  same => n(exit),Hangup()
 
 exten => *,1,GotoIf($[${CONTROL}]?talk,play:talk,listen)
 exten => #,1,GotoIf($[${CONTROL}]?talk,1:talk,listen)
-exten => 0,1,ExecIf($[${CONTROL}]?WaitDigit(1500,*#):Goto(talk,listen))
- same => n,GotoIf($["${WAITDIGITSTATUS}"=="DTMF"]?${WAITDIGITRESULT},1:talk,exit)
+exten => 0,1,ExecIf($[${CONTROL}]?ControlPlayback(talk-bot/${BG},,,,*#):Goto(talk,listen))
+ same => n,GotoIf($["${CPLAYBACKSTATUS}"=="USERSTOPPED"]?${CPLAYBACKSTOPKEY},1:talk,exit)
 
 exten => sub-play-locked,1,NoOp()
  same => n,Playback(${FILE})
