--- a/app-talk-bot/main.conf
+++ b/app-talk-bot/main.conf
@@ -43,7 +43,7 @@ exten => talk,1,NoOp()
  same => n(listen),BackgroundDetect(talk-bot/${IF($[0${i}]?${BG}:silence)},1500)
  same => n(exit),Hangup()
 
-exten => *,1,GotoIf($[${CONTROL}]?talk,play:talk,listen)
+exten => *,1,GotoIf($[${CONTROL}&0${i}]?talk,play:talk,listen)
 exten => #,1,GotoIf($[${CONTROL}]?talk,1:talk,listen)
 exten => 0,1,ExecIf($[${CONTROL}]?ControlPlayback(talk-bot/${BG},,,,*#):Goto(talk,listen))
  same => n,GotoIf($["${CPLAYBACKSTATUS}"=="USERSTOPPED"]?${CPLAYBACKSTOPKEY},1:talk,exit)
