--- a/app-talk-bot/main.conf
+++ b/app-talk-bot/main.conf
@@ -60,5 +60,5 @@ exten => sub-play-control,1,NoOp()
  same => n,Return()
 
 exten => sub-error,1,NoOp()
- same => n,Playback(silence/1&an-error-has-occured&pls-try-call-later)
+ same => n,Playback(silence/1&an-error-has-occurred&pls-try-call-later)
  same => n,Hangup()
