--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -132,5 +132,5 @@ exten => sub-track-exists,1,NoOp()
  same => n,Return()
 
 exten => sub-error,1,NoOp()
- same => n,Playback(an-error-has-occured&pls-try-call-later)
+ same => n,Playback(silence/1&an-error-has-occurred&pls-try-call-later)
  same => n,Hangup()
