--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -57,7 +57,7 @@ exten => locked,1,NoOp()
  same => n,Hangup()
 
 exten => control,1,NoOp()
- same => n,Set(CPLAYBACKOFFSET=)
+ same => n(restart),Set(CPLAYBACKOFFSET=)
  same => n(play),ControlPlayback(music/${FILE},5000,#,*,02345679,,1,o(0${CPLAYBACKOFFSET}))
  same => n,GosubIf($["${CPLAYBACKSTATUS}"=="SUCCESS"&0${PLAYLIST}]?sub-update-track,1(+))
  same => n,GotoIf($["${CPLAYBACKSTATUS}"=="SUCCESS"&0${REPEAT}]?1)
@@ -74,12 +74,13 @@ exten => control,1,NoOp()
  same => n,Goto(menu,1)
 
 exten => sub-pause,1,NoOp()
- same => n(wait),WaitDigit(60,045679)
+ same => n(wait),WaitDigit(60,0145679)
  same => n,GotoIf($["${WAITDIGITSTATUS}"=="TIMEOUT"]?wait)
  same => n,GosubIf($["${WAITDIGITRESULT}"=="4"]?sub-toggle-repeat,1)
  same => n,GosubIf($["${WAITDIGITRESULT}"=="5"]?sub-update-track,1(-))
  same => n,GosubIf($["${WAITDIGITRESULT}"=="6"]?sub-update-track,1(+))
  same => n,GosubIf($["${WAITDIGITRESULT}"=="7"]?sub-toggle-playlist,1)
+ same => n,GotoIf($["${WAITDIGITRESULT}"=="1"]?control,restart)
  same => n,GotoIf($["${WAITDIGITRESULT}"=="0"]?control,play)
  same => n,GotoIf($["${WAITDIGITRESULT}"=="9"]?menu,1)
  same => n,Goto(wait)
