--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -99,7 +99,7 @@ exten => sub-update-track,1,NoOp()
  same => n,Set(TRACK=$[${TRACK}${OP}1])
  same => n,Gosub(sub-track-exists,1(${TRACK}))
  same => n,GotoIf($["${TRACKEXISTS}"=="YES"]?play)
- same => n,GotoIf($[0${PLAYLIST}==0]?menu,1)
+ same => n,GotoIf($[0${PLAYLIST}]?:menu,1)
  same => n,While(1)
  same => n,  Gosub(sub-track-exists,1($[${TRACK}${OPOP}1]))
  same => n,  ExecIf($["${TRACKEXISTS}"!="YES"]?ExitWhile())
