--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -25,7 +25,7 @@ exten => menu,1,NoOp()
  same => n,Set(CONNECTEDLINE(name,i)=Music Menu)
  same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
  same => n,Set(ARRAY(CONTROL,TRIES)=1,0)
- same => n,Set(MAX=${SHELL(ls "${WORKDIR}" | tail -1 | sed -r "s/(\d*)\..*/\1/" | ${CMDTRIM})})
+ same => n,Set(MAX=${SHELL(ls -v "${WORKDIR}" | tail -1 | sed -r "s/(\d*)\..*/\1/" | ${CMDTRIM})})
  same => n(wait),Gosub(sub-play-beep,1)
  same => n,Set(ARRAY(TRACK,TRACKEXISTS)=)
  same => n,While($[${LEN(0${TRACK})}<${LEN(0${MAX})}])
