--- a/app-talk-bot/main.conf
+++ b/app-talk-bot/main.conf
@@ -1,9 +1,12 @@
-; EXT,X - choose audio
-; EXT,0 - start listening
-; 
-; # - advance
-; * - replay
-; 0 - pause
+;--
+EXT,X - Select Audio
+EXT,0 - Start Listening
+
+/// Controls
+# - Advance
+* - Replay
+0 - Pause
+--;
 
 [tb-control]
 exten => _.,1,Gosub(tb-core,i,1(${EXTEN},control))
@@ -14,6 +17,8 @@ exten => _.,1,Gosub(tb-core,i,1(${EXTEN},locked))
 [tb-core]
 exten => i,1,NoOp()
  same => n,Set(ARRAY(NAME,MODE)=${ARG1},${ARG2})
+ same => n,Set(FNAME=${SHELL(printf "${NAME}" | sed -e "s/\b\(.\)/\u\1/g")})
+ same => n,Set(FNAME=${REPLACE(FNAME,_-, )})
  same => n,Set(WORKDIR=${ASTDATADIR}/sounds/talk-bot/${NAME})
  same => n,Set(CMDPREFIX=ls ${WORKDIR} | sort -n)
  same => n,Set(TOTAL=${FILTER(0-9,${SHELL(${CMDPREFIX} | grep "^[0-9]*"  | tail -1)})})
@@ -23,6 +28,7 @@ exten => i,1,NoOp()
  same => n,Set(BG=${IF($["${SYSTEMSTATUS}"=="SUCCESS"]?${NAME}/background:silence)})
  same => n,Goto(${MODE})
  same => n(control),Set(CONTROL=1)
+ same => n,Gosub(sub-update-title,1)
  same => n,While($["${START}"!="0"&${LEN(${START})}<${LEN(${TOTAL})}])
  same => n,  Answer()
  same => n,  WaitDigit(${IF($[${LEN(${START})}]?0.5:1.5)},0123456789#)
@@ -39,6 +45,7 @@ exten => i,1,NoOp()
 exten => talk,1,NoOp()
  same => n,Set(i=${IF($[0${i}==0${TOTAL}]?${LOOPN}:$[0${i}+${IF($[0${i}]?1:${START})}])})
  same => n,Set(FILE=talk-bot/${NAME}/${i}${IF($[${i}==${LOOPN}]?"L")})
+ same => n,GosubIf($[${CONTROL}]?sub-update-title,1)
  same => n(play),Gosub(sub-play-${IF($[${CONTROL}]?control:locked)},1)
  same => n(listen),BackgroundDetect(talk-bot/${IF($[0${i}]?${BG}:silence)},1500)
  same => n(exit),Hangup()
@@ -57,6 +64,11 @@ exten => sub-play-control,1,NoOp()
  same => n,ControlPlayback(${FILE},,,,0*#)
  same => n,GotoIf($["${CPLAYBACKSTOPKEY}"=="*"]?talk,play)
  same => n,GotoIf($["${CPLAYBACKSTOPKEY}"=="0"]?0,1)
+ same => n,Return()
+
+exten => sub-update-title,1,NoOp()
+ same => n,Set(CONNECTEDLINE(name,i)=${FNAME} ${IF($[0${i}]?(${i}))})
+ same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
  same => n,Return()
 
 exten => sub-error,1,NoOp()
