--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -1,16 +1,19 @@
-; EXT,X - choose track
-; 
-; # - ff
-; * - rew
-; 0 - pause
-; 1 - restart
-; 2 - vol-down
-; 3 - vol-up
-; 5 - trk-previous
-; 6 - trk-next
-; 4 - tgl-repeat
-; 7 - tgl-playlist
-; 9 - menu
+;--
+EXT,XXX - Select Track
+
+/// Controls (Available After Track Selected)
+# - Fast Forward
+* - Rewind
+0 - Play Pause
+1 - Restart
+2 - Volume Down
+3 - Volume Up
+5 - Track Previous
+6 - Track Next
+4 - Toggle Repeat
+7 - Toggle Playlist
+9 - Menu
+--;
 
 [music]
 exten => _X!,1,Gosub(play,1(${EXTEN}))
@@ -22,8 +25,7 @@ exten => init,1,NoOp()
 
 exten => menu,1,NoOp()
  same => n,Gosub(init,1)
- same => n,Set(CONNECTEDLINE(name,i)=Music Menu)
- same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
+ same => n,Gosub(sub-update-title,1(Menu))
  same => n,Set(ARRAY(CONTROL,TRIES)=1,0)
  same => n,Set(MAX=${SHELL(ls -v "${WORKDIR}" | tail -1 | sed -r "s/(\d*)\..*/\1/" | ${CMDTRIM})})
  same => n(wait),Gosub(sub-play-beep,1)
@@ -48,8 +50,7 @@ exten => play,1,NoOp()
  same => n,Set(FILE=${SHELL(ls "${WORKDIR}" | grep "^${TRACK}\..*" | sed -r "s/(.*)\..*/\1/" | ${CMDTRIM})})
  same => n,GosubIf($["${FILE}"==""]?sub-error,1)
  same => n,Verbose(Playing: ${FILE})
- same => n,Set(CONNECTEDLINE(name,i)=Music ${FILE})
- same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
+ same => n,Gosub(sub-update-title,1(${FILE}))
  same => n,Goto(${IF($[0${CONTROL}]?control:locked)},1)
 
 exten => locked,1,NoOp()
@@ -86,12 +87,14 @@ exten => sub-pause,1,NoOp()
  same => n,Goto(wait)
 
 exten => sub-update-volume,1,NoOp()
- same => n,Set(ARRAY(OP,V,MIN,MAX)="${ARG1}",${VOLUME(TX)},-8,8)
- same => n,Set(N=${IF($[${V}<=-${IF($["${OP}"=="+"]?5:2)}|${V}>=${IF($["${OP}"=="+"]?2:5)}]?3:2)})
- same => n,Set(NV=$[${V}${OP}${N}])
- same => n,Set(OOR=$[${NV}<${MIN}|${NV}>${MAX}])
- same => n,GosubIf($[${OOR}]?sub-play-beep,1)
- same => n,Set(VOLUME(TX)=${IF($[${OOR}]?${V}:${NV})})
+ same => n,Set(ARRAY(OP,V)=${ARG1},$[${VOLUME(TX)}+0])
+ same => n,Set(STEPS=-50|-18|-9|-3|0|2|4|8|50)
+ same => n,Set(STEPQTY=${FIELDQTY(STEPS,|)})
+ same => n,Set(STEPNUMCURRENT=${FIELDNUM(STEPS,|,${V})})
+ same => n,Set(STEPNUMNEW=$[${STEPNUMCURRENT}${OP}1])
+ same => n,Set(OUTOFRANGE=$[${STEPNUMNEW}<1|${STEPNUMNEW}>${STEPQTY}])
+ same => n,GosubIf($[${OUTOFRANGE}]?sub-play-beep,1)
+ same => n,Set(VOLUME(TX)=${CUT(STEPS,|,${IF($[${OUTOFRANGE}]?${STEPNUMCURRENT}:${STEPNUMNEW})})})
  same => n,Return()
 
 exten => sub-update-track,1,NoOp()
@@ -125,11 +128,15 @@ exten => sub-play-beep,1,NoOp()
  same => n,Return()
 
 exten => sub-track-exists,1,NoOp()
- same => n,Set(ARRAY(T,TRACKEXISTS)=${ARG1},0)
- same => n,Set(CMDA=ls "${WORKDIR}" | grep -q "^${T}\..*"   && printf "YES"   || printf "NO")
- same => n,Set(CMDB=ls "${WORKDIR}" | grep -q "^${T}.*\..*" && printf "MAYBE" || printf "NO")
+ same => n,Set(CMDA=ls "${WORKDIR}" | grep -q "^${ARG1}\..*"   && printf "YES"   || printf "NO")
+ same => n,Set(CMDB=ls "${WORKDIR}" | grep -q "^${ARG1}.*\..*" && printf "MAYBE" || printf "NO")
  same => n,Set(TRACKEXISTS=${SHELL(${CMDA})})
  same => n,Set(TRACKEXISTS=${IF($["${TRACKEXISTS}"=="YES"]?${TRACKEXISTS}:${SHELL(${CMDB})})})
+ same => n,Return()
+
+exten => sub-update-title,1,NoOp()
+ same => n,Set(CONNECTEDLINE(name,i)=Music ${ARG1})
+ same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
  same => n,Return()
 
 exten => sub-error,1,NoOp()
