--- a/app-talk-bot/main.conf
+++ b/app-talk-bot/main.conf
@@ -1,11 +1,12 @@
 ;--
-EXT,X - Select Audio
-EXT,0 - Start Listening
+EXT ┬ Extension
+    ├ ,X ─ Select Audio
+    ╰ ,0 ─ Start Listening
 
 /// Controls
-# - Advance
-* - Replay
-0 - Pause
+# ─ Advance
+* ─ Replay
+0 ─ Pause
 --;
 
 [tb-control]
@@ -67,7 +68,7 @@ exten => sub-play-control,1,NoOp()
  same => n,Return()
 
 exten => sub-update-title,1,NoOp()
- same => n,Set(CONNECTEDLINE(name,i)=${FNAME} ${IF($[0${i}]?(${i}))})
+ same => n,Set(CONNECTEDLINE(name,i)=${FNAME} ${IF($[0${i}]?  •  ${i})})
  same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
  same => n,Return()
 
