--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -1,37 +1,46 @@
 ;--
-EXT,XXX - Select Track
+EXT,IDX ─ Select Track
 
 /// Controls (Available After Track Selected)
-# - Fast Forward
-* - Rewind
-0 - Play Pause
-1 - Restart
-2 - Volume Down
-3 - Volume Up
-5 - Track Previous
-6 - Track Next
-4 - Toggle Repeat
-7 - Toggle Playlist
-9 - Menu
+# ┬ Track Next
+* ┴ Track Previous
+0 ─ Pause Play
+
+3 ┬ Fast Forward
+2 ┴ Rewind
+1 ─ Restart
+
+6 ┬ Volume Up
+5 ┴ Volume Down
+4 ─ Volume Reset
+
+9 ┬ Toggle Repeat╶──╮   
+8 ┴ Toggle Playlist╶┴─ Repeat List
+7 ─ Menu
 --;
 
 [music]
 exten => _X!,1,Gosub(play,1(${EXTEN}))
 
 exten => init,1,NoOp()
+ same => n,GotoIf($[0${INITED}]?e)
  same => n,Set(WORKDIR=${ASTDATADIR}/sounds/music)
  same => n,Set(CMDTRIM=tr -d "\r\n")
- same => n,Return()
+ same => n,Set(VSTEPS=-50|-18|-9|-3|0|2|4|8|50)
+ same => n,Set(ARRAY(INITED,REPEAT,PLAYLIST)=1,0,0)
+ same => n,GosubIf($[0${CONTROL}]?sub-update-title,1(INIT))
+ same => n,Answer()
+ same => n(e),Return()
 
 exten => menu,1,NoOp()
- same => n,Gosub(init,1)
- same => n,Gosub(sub-update-title,1(Menu))
+ same => n,Set(CALLS=$[0${CALLS}+1])
  same => n,Set(ARRAY(CONTROL,TRIES)=1,0)
+ same => n,Gosub(init,1)
  same => n,Set(MAX=${SHELL(ls -v "${WORKDIR}" | tail -1 | sed -r "s/(\d*)\..*/\1/" | ${CMDTRIM})})
- same => n(wait),Gosub(sub-play-beep,1)
+ same => n,Gosub(sub-update-title,1(MENU))
+ same => n(wait),GosubIf($[${CALLS}>1|${TRIES}]?sub-play-beep,1)
  same => n,Set(ARRAY(TRACK,TRACKEXISTS)=)
  same => n,While($[${LEN(0${TRACK})}<${LEN(0${MAX})}])
- same => n,  Answer()
  same => n,  WaitDigit(${IF($["${TRACKEXISTS}"=="YES"]?0.5:60)},0123456789#)
  same => n,  ExecIf($["${WAITDIGITSTATUS}"!="DTMF"]?ExitWhile())
  same => n,  ExecIf($["${WAITDIGITRESULT}"=="#"]?ExitWhile())
@@ -41,7 +50,7 @@ exten => menu,1,NoOp()
  same => n,EndWhile()
  same => n,GosubIf($["${TRACKEXISTS}"=="YES"]?play,1(${TRACK}))
  same => n,Set(TRIES=$[${TRIES}+1])
- same => n,ExecIf($[${TRIES}>2]?Hangup())
+ same => n,ExecIf($[${TRIES}>3]?Hangup())
  same => n,Goto(wait)
 
 exten => play,1,NoOp()
@@ -50,82 +59,84 @@ exten => play,1,NoOp()
  same => n,Set(FILE=${SHELL(ls "${WORKDIR}" | grep "^${TRACK}\..*" | sed -r "s/(.*)\..*/\1/" | ${CMDTRIM})})
  same => n,GosubIf($["${FILE}"==""]?sub-error,1)
  same => n,Verbose(Playing: ${FILE})
- same => n,Gosub(sub-update-title,1(${FILE}))
- same => n,Goto(${IF($[0${CONTROL}]?control:locked)},1)
+ same => n,Goto(player-${IF($[0${CONTROL}]?control:locked)},1)
 
-exten => locked,1,NoOp()
+exten => player-locked,1,NoOp()
  same => n,Playback(music/${FILE})
  same => n,Hangup()
 
-exten => control,1,NoOp()
+exten => player-control,1,NoOp()
  same => n(restart),Set(CPLAYBACKOFFSET=)
- same => n(play),ControlPlayback(music/${FILE},5000,#,*,02345679,,1,o(0${CPLAYBACKOFFSET}))
- same => n,GosubIf($["${CPLAYBACKSTATUS}"=="SUCCESS"&0${PLAYLIST}]?sub-update-track,1(+))
- same => n,GotoIf($["${CPLAYBACKSTATUS}"=="SUCCESS"&0${REPEAT}]?1)
+ same => n(play),Gosub(sub-update-title,1(PLAYING))
+ same => n,ControlPlayback(music/${FILE},5000,3,2,9876540*#,,1,o(0${CPLAYBACKOFFSET}))
+ same => n,GosubIf($["${CPLAYBACKSTATUS}"=="SUCCESS"&${PLAYLIST}]?sub-update-track,1(+))
+ same => n,GotoIf($["${CPLAYBACKSTATUS}"=="SUCCESS"&${REPEAT}]?1)
  same => n,ExecIf($["${CPLAYBACKSTATUS}"!="USERSTOPPED"]?Set(CPLAYBACKSTOPKEY=))
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="9"]?sub-toggle-repeat,1)
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="8"]?sub-toggle-playlist,1)
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="7"]?menu,1)
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="6"]?sub-update-volume,1(+))
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="5"]?sub-update-volume,1(-))
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="4"]?sub-reset-volume,1)
  same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="0"]?sub-pause,1)
- same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="2"]?sub-update-volume,1(-))
- same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="3"]?sub-update-volume,1(+))
- same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="4"]?sub-toggle-repeat,1)
- same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="5"]?sub-update-track,1(-))
- same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="6"]?sub-update-track,1(+))
- same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="7"]?sub-toggle-playlist,1)
- same => n,GotoIf($["${CPLAYBACKSTOPKEY}"=="9"]?menu,1)
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="*"]?sub-update-track,1(-,1))
+ same => n,GosubIf($["${CPLAYBACKSTOPKEY}"=="#"]?sub-update-track,1(+,1))
  same => n,GotoIf($["${CPLAYBACKSTOPKEY}"!=""]?play)
  same => n,Goto(menu,1)
 
 exten => sub-pause,1,NoOp()
- same => n(wait),WaitDigit(60,0145679)
+ same => n,Gosub(sub-update-title,1(PAUSED))
+ same => n(wait),WaitDigit(60,98710*#)
  same => n,GotoIf($["${WAITDIGITSTATUS}"=="TIMEOUT"]?wait)
- same => n,GosubIf($["${WAITDIGITRESULT}"=="4"]?sub-toggle-repeat,1)
- same => n,GosubIf($["${WAITDIGITRESULT}"=="5"]?sub-update-track,1(-))
- same => n,GosubIf($["${WAITDIGITRESULT}"=="6"]?sub-update-track,1(+))
- same => n,GosubIf($["${WAITDIGITRESULT}"=="7"]?sub-toggle-playlist,1)
- same => n,GotoIf($["${WAITDIGITRESULT}"=="1"]?control,restart)
- same => n,GotoIf($["${WAITDIGITRESULT}"=="0"]?control,play)
- same => n,GotoIf($["${WAITDIGITRESULT}"=="9"]?menu,1)
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="9"]?sub-toggle-repeat,1)
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="8"]?sub-toggle-playlist,1)
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="7"]?menu,1)
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="1"]?player-control,restart)
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="0"]?player-control,play)
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="*"]?sub-update-track,1(-,1))
+ same => n,GosubIf($["${WAITDIGITRESULT}"=="#"]?sub-update-track,1(+,1))
  same => n,Goto(wait)
 
+exten => sub-toggle-playlist,1,NoOp()
+ same => n,Set(PLAYLIST=$[!${PLAYLIST}])
+ same => n,Gosub(sub-update-title,1)
+ same => n,GosubIf($[${PLAYLIST}]?sub-play-beep,1)
+ same => n,Return()
+
+exten => sub-toggle-repeat,1,NoOp()
+ same => n,Set(REPEAT=$[!${REPEAT}])
+ same => n,Gosub(sub-update-title,1)
+ same => n,GosubIf($[${REPEAT}]?sub-play-beep,1)
+ same => n,Return()
+
+exten => sub-reset-volume,1,NoOp()
+ same => n,Set(VOLUME(TX)=0)
+ same => n,Return()
+
 exten => sub-update-volume,1,NoOp()
- same => n,Set(ARRAY(OP,V)=${ARG1},$[${VOLUME(TX)}+0])
- same => n,Set(STEPS=-50|-18|-9|-3|0|2|4|8|50)
- same => n,Set(STEPQTY=${FIELDQTY(STEPS,|)})
- same => n,Set(STEPNUMCURRENT=${FIELDNUM(STEPS,|,${V})})
- same => n,Set(STEPNUMNEW=$[${STEPNUMCURRENT}${OP}1])
- same => n,Set(OUTOFRANGE=$[${STEPNUMNEW}<1|${STEPNUMNEW}>${STEPQTY}])
+ same => n,Set(ARRAY(OP,V)=${ARG1},$[0${VOLUME(TX)}+0])
+ same => n,Set(STEPIDXMAX=${FIELDQTY(VSTEPS,|)})
+ same => n,Set(STEPIDXCURRENT=${FIELDNUM(VSTEPS,|,${V})})
+ same => n,Set(STEPIDXNEW=$[${STEPIDXCURRENT}${OP}1])
+ same => n,Set(OUTOFRANGE=$[${STEPIDXNEW}<1|${STEPIDXNEW}>${STEPIDXMAX}])
  same => n,GosubIf($[${OUTOFRANGE}]?sub-play-beep,1)
- same => n,Set(VOLUME(TX)=${CUT(STEPS,|,${IF($[${OUTOFRANGE}]?${STEPNUMCURRENT}:${STEPNUMNEW})})})
+ same => n,Set(VOLUME(TX)=${CUT(VSTEPS,|,${IF($[${OUTOFRANGE}]?${STEPIDXCURRENT}:${STEPIDXNEW})})})
  same => n,Return()
 
 exten => sub-update-track,1,NoOp()
- same => n,Set(ARRAY(OP,OPOP)=${ARG1},${IF($["${ARG1}"=="+"]?-:+)})
+ same => n,Set(ARRAY(OP,USERTRIGGERED)=${ARG1},0${ARG2})
+ same => n,Set(OPOP=${IF($["${OP}"=="+"]?-:+)})
  same => n,Set(TRACK=$[${TRACK}${OP}1])
  same => n,Gosub(sub-track-exists,1(${TRACK}))
  same => n,GotoIf($["${TRACKEXISTS}"=="YES"]?play)
- same => n,GotoIf($[0${PLAYLIST}&0${REPEAT}]?:menu,1)
+ same => n,Set(LOOPBACK=$[${USERTRIGGERED}|(${PLAYLIST}&${REPEAT})])
+ same => n,GotoIf($[${LOOPBACK}]?:menu,1)
  same => n,While(1)
  same => n,  Gosub(sub-track-exists,1($[${TRACK}${OPOP}1]))
  same => n,  ExecIf($["${TRACKEXISTS}"!="YES"]?ExitWhile())
  same => n,  Set(TRACK=$[${TRACK}${OPOP}1])
  same => n,EndWhile()
  same => n(play),Gosub(play,1(${TRACK}))
-
-exten => sub-toggle-repeat,1,NoOp()
- same => n,Set(REPEAT=${IF($[0${REPEAT}]?0:1)})
- same => n,GosubIf($[${REPEAT}]?sub-play-beep,1)
- same => n,Return()
-
-exten => sub-toggle-playlist,1,NoOp()
- same => n,Set(PLAYLIST=${IF($[0${PLAYLIST}]?0:1)})
- same => n,GosubIf($[${PLAYLIST}]?sub-play-beep,1)
- same => n,Return()
-
-exten => sub-play-beep,1,NoOp()
- same => n,Set(VOL=${VOLUME(TX)})
- same => n,Set(VOLUME(TX)=0)
- same => n,Playback(beep,skip)
- same => n,Set(VOLUME(TX)=${VOL})
- same => n,Return()
 
 exten => sub-track-exists,1,NoOp()
  same => n,Set(CMDA=ls "${WORKDIR}" | grep -q "^${ARG1}\..*"   && printf "YES"   || printf "NO")
@@ -135,8 +146,29 @@ exten => sub-track-exists,1,NoOp()
  same => n,Return()
 
 exten => sub-update-title,1,NoOp()
- same => n,Set(CONNECTEDLINE(name,i)=Music ${ARG1})
+ same => n,Set(STATE=${IF($["${ARG1}"==""]?${STATE}:${ARG1})})
+ same => n,Set(SEPARATOR=  •  )
+ same => n,If($["${STATE}"=="INIT"])
+ same => n,  Set(TITLE=Music)
+ same => n,  ExitIf()
+ same => n,ElseIf($["${STATE}"=="MENU"])
+ same => n,  Set(TITLE=Music ☐ ${SEPARATOR} Enter Track)
+ same => n,ElseIf($["${STATE}"!="MENU"])
+ same => n,  Set(ICONSTATUS=${IF($["${STATE}"=="PLAYING"]?▷: I I)})
+ same => n,  Set(ICONPLAYLIST=${IF($[${PLAYLIST}]? ☰)})
+ same => n,  Set(ICONREPEAT=${IF($[${REPEAT}]? ⭯)})
+ same => n,  Set(TITLE=Music ${ICONSTATUS}${ICONPLAYLIST}${ICONREPEAT})
+ same => n,  Set(TITLE=${TITLE}${SEPARATOR}${FILE})
+ same => n,EndIf()
+ same => n,Set(CONNECTEDLINE(name,i)=${TITLE})
  same => n,Set(CONNECTEDLINE(num)=${CALLERID(dnid)})
+ same => n,Return()
+
+exten => sub-play-beep,1,NoOp()
+ same => n,Set(V=${VOLUME(TX)})
+ same => n,Set(VOLUME(TX)=0)
+ same => n,Playback(beep)
+ same => n,Set(VOLUME(TX)=${V})
  same => n,Return()
 
 exten => sub-error,1,NoOp()
