--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -14,8 +14,8 @@ EXT,IDX ─ Select Track
 5 ┴ Volume Down
 4 ─ Volume Reset
 
-9 ┬ Toggle Repeat╶──╮   
-8 ┴ Toggle Playlist╶┴─ Repeat List
+9 ┬ ⭯ Toggle Repeat╶──╮   
+8 ┴ ☰ Toggle Playlist╶┴─ Repeat List
 7 ─ Menu
 --;
 
