--- a/app-dictaphone/main.conf
+++ b/app-dictaphone/main.conf
@@ -1,25 +1,25 @@
 ;--
 /// Controls
-0 ─ Pause ◇ Continue
+0 ─ Pause  Continue
 Z ─ Select Slot (1-9)
 * ┬ Cycle Mode1s
 //├─┬ Playback (⭯)
-  │ ╰ # ─ Play ◇ Stop
+  │ ╰ # ─ Play ○ Stop
 //╰─┬ Record
-    ╰ # ─ Record ◇ Stop
+    ╰ # ─ Record ○ Stop
 --;
 
 [dictaphone]
 exten => _[A-D],1,NoOp()
+ same => n,Set(MODES=P|PR|R)
  same => n,Set(USER=${CDR(source)})
- same => n,Set(WORKDIR=${ASTDATADIR}/sounds/dictaphone/)
- same => n,Set(LOCKFILE=${WORKDIR}${USER}.lock)
+ same => n,Set(DIRWORK=${ASTSPOOLDIR}/dictaphone)
+ same => n,Set(LOCKFILE=${DIRWORK}/${USER}.lock)
  same => n,Gosub(sub-check-lock,1)
- same => n,Set(STOREFILE=${WORKDIR}${USER}.txt)
- same => n,Set(STOREDATA=${SHELL(printf "$(cat ${STOREFILE} 2>/dev/null)")})
+ same => n,Set(STOREFILE=${DIRWORK}/${USER}.txt)
+ same => n,Set(STOREDATA=${SHELL(cat ${STOREFILE} 2>/dev/null | tr -d "\r\n")})
  same => n,Set(ISVALID=${REGEX("^(PR?|R)\,[A-D]\,[1-9]$" ${STOREDATA})})
  same => n,Set(ARRAY(MODE,GROUP,SLOT)=${IF($[${ISVALID}]?${STOREDATA}:R,${EXTEN},1)})
- same => n,Set(MODES=P|PR|R)
  same => n,Gosub(sub-ready,1)
 
 exten => sub-check-lock,1,NoOp()
@@ -119,13 +119,13 @@ exten => sub-set-status,1,NoOp()
  same => n,Return()
 
 exten => sub-slot-exists,1,NoOp()
- same => n,Set(FILE=${WORKDIR}${USER}.${GROUP}.${SLOT})
+ same => n,Set(FILE=${DIRWORK}/${USER}.${GROUP}.${SLOT})
  same => n,Set(EXISTS=${SHELL(test -e ${FILE}.wav && printf "YES" || printf "NO")})
  same => n,Set(RECFILE=${FILE}.NEW.wav)
  same => n,Return()
 
 exten => sub-update-store,1,NoOp()
- same => n,System(echo "${MODE},${GROUP},${SLOT}" > ${STOREFILE})
+ same => n,System(mkdir -p ${DIRWORK} && echo "${MODE},${GROUP},${SLOT}" > ${STOREFILE})
  same => n,Return()
 
 exten => sub-update-title,1,NoOp()
