player now remembers state

--- a/app-music-player/main.conf
+++ b/app-music-player/main.conf
@@ -1,7 +1,7 @@
 ;--
-EXT,IDX ─ Select Track
+EXT,TRK ─ Select Track
 
-/// Controls (Available After Track Selected)
+/// Controls (Available Once Track Playing)
 # ┬ Track Next
 * ┴ Track Previous
 0 ─ Pause Play
@@ -24,10 +24,17 @@ exten => _X!,1,Gosub(play,1(${EXTEN}))
 
 exten => init,1,NoOp()
  same => n,GotoIf($[0${INITED}]?e)
- same => n,Set(WORKDIR=${ASTDATADIR}/sounds/music)
  same => n,Set(CMDTRIM=tr -d "\r\n")
  same => n,Set(VSTEPS=-50|-18|-9|-3|0|2|4|8|50)
- same => n,Set(ARRAY(INITED,REPEAT,PLAYLIST)=1,0,0)
+ same => n,Set(USER=${CDR(source)})
+ same => n,Set(DIRDATA=${ASTDATADIR}/sounds/music)
+ same => n,Set(DIRWORK=${ASTSPOOLDIR}/music-player)
+ same => n,Set(STOREFILE=${DIRWORK}/${USER}.txt)
+ same => n,Set(STOREDATA=${SHELL(cat ${STOREFILE} 2>/dev/null | ${CMDTRIM})})
+ same => n,Set(ISVALID=${REGEX("^-?[0-9]+\,[01]\,[01]$" ${STOREDATA})})
+ same => n,Set(ARRAY(V,REPEAT,PLAYLIST)=${IF($[${ISVALID}]?${STOREDATA}:0,0,0)})
+ same => n,Set(VOLUME(TX)=${V})
+ same => n,Set(INITED=1)
  same => n,GosubIf($[0${CONTROL}]?sub-update-title,1(INIT))
  same => n,Answer()
  same => n(e),Return()
@@ -36,7 +43,7 @@ exten => menu,1,NoOp()
  same => n,Set(CALLS=$[0${CALLS}+1])
  same => n,Set(ARRAY(CONTROL,TRIES)=1,0)
  same => n,Gosub(init,1)
- same => n,Set(MAX=${SHELL(ls -v "${WORKDIR}" | tail -1 | sed -r "s/(\d*)\..*/\1/" | ${CMDTRIM})})
+ same => n,Set(MAX=${SHELL(ls -v "${DIRDATA}" | tail -1 | sed -r "s/(\d*)\..*/\1/" | ${CMDTRIM})})
  same => n,Gosub(sub-update-title,1(MENU))
  same => n(wait),GosubIf($[${CALLS}>1|${TRIES}]?sub-play-beep,1)
  same => n,Set(ARRAY(TRACK,TRACKEXISTS)=)
@@ -56,7 +63,7 @@ exten => menu,1,NoOp()
 exten => play,1,NoOp()
  same => n,Gosub(init,1)
  same => n,Set(TRACK=${ARG1})
- same => n,Set(FILE=${SHELL(ls "${WORKDIR}" | grep "^${TRACK}\..*" | sed -r "s/(.*)\..*/\1/" | ${CMDTRIM})})
+ same => n,Set(FILE=${SHELL(ls "${DIRDATA}" | grep "^${TRACK}\..*" | sed -r "s/(.*)\..*/\1/" | ${CMDTRIM})})
  same => n,GosubIf($["${FILE}"==""]?sub-error,1)
  same => n,Verbose(Playing: ${FILE})
  same => n,Goto(player-${IF($[0${CONTROL}]?control:locked)},1)
@@ -99,18 +106,21 @@ exten => sub-pause,1,NoOp()
 
 exten => sub-toggle-playlist,1,NoOp()
  same => n,Set(PLAYLIST=$[!${PLAYLIST}])
+ same => n,Gosub(sub-update-store,1)
  same => n,Gosub(sub-update-title,1)
  same => n,GosubIf($[${PLAYLIST}]?sub-play-beep,1)
  same => n,Return()
 
 exten => sub-toggle-repeat,1,NoOp()
  same => n,Set(REPEAT=$[!${REPEAT}])
+ same => n,Gosub(sub-update-store,1)
  same => n,Gosub(sub-update-title,1)
  same => n,GosubIf($[${REPEAT}]?sub-play-beep,1)
  same => n,Return()
 
 exten => sub-reset-volume,1,NoOp()
  same => n,Set(VOLUME(TX)=0)
+ same => n,Gosub(sub-update-store,1)
  same => n,Return()
 
 exten => sub-update-volume,1,NoOp()
@@ -121,6 +131,7 @@ exten => sub-update-volume,1,NoOp()
  same => n,Set(OUTOFRANGE=$[${STEPIDXNEW}<1|${STEPIDXNEW}>${STEPIDXMAX}])
  same => n,GosubIf($[${OUTOFRANGE}]?sub-play-beep,1)
  same => n,Set(VOLUME(TX)=${CUT(VSTEPS,|,${IF($[${OUTOFRANGE}]?${STEPIDXCURRENT}:${STEPIDXNEW})})})
+ same => n,Gosub(sub-update-store,1)
  same => n,Return()
 
 exten => sub-update-track,1,NoOp()
@@ -139,10 +150,15 @@ exten => sub-update-track,1,NoOp()
  same => n(play),Gosub(play,1(${TRACK}))
 
 exten => sub-track-exists,1,NoOp()
- same => n,Set(CMDA=ls "${WORKDIR}" | grep -q "^${ARG1}\..*"   && printf "YES"   || printf "NO")
- same => n,Set(CMDB=ls "${WORKDIR}" | grep -q "^${ARG1}.*\..*" && printf "MAYBE" || printf "NO")
+ same => n,Set(CMDA=ls "${DIRDATA}" | grep -q "^${ARG1}\..*"   && printf "YES"   || printf "NO")
+ same => n,Set(CMDB=ls "${DIRDATA}" | grep -q "^${ARG1}.*\..*" && printf "MAYBE" || printf "NO")
  same => n,Set(TRACKEXISTS=${SHELL(${CMDA})})
  same => n,Set(TRACKEXISTS=${IF($["${TRACKEXISTS}"=="YES"]?${TRACKEXISTS}:${SHELL(${CMDB})})})
+ same => n,Return()
+
+exten => sub-update-store,1,NoOp()
+ same => n,Set(V=$[0${VOLUME(TX)}+0])
+ same => n,System(mkdir -p ${DIRWORK} && echo "${V},${REPEAT},${PLAYLIST}" > ${STOREFILE})
  same => n,Return()
 
 exten => sub-update-title,1,NoOp()
@@ -174,3 +190,19 @@ exten => sub-play-beep,1,NoOp()
 exten => sub-error,1,NoOp()
  same => n,Playback(silence/1&an-error-has-occurred&pls-try-call-later)
  same => n,Hangup()
+
+; # VitalPBX: Direct Dialing Tracks 
+; 
+; ## Examples
+; 
+; ### Usage
+; 
+; 5*TRK ─ Direct Dial Track
+; 
+; ### Dialplan
+; ```
+; [cos-all-custom](+)
+; exten => _5*X!,1,NoOp()
+;  same => n,Set(TRACK=${CUT(EXTEN,*,2)})
+;  same => n,Gosub(music,${TRACK},1)
+; ```
